[project]
name = "glinet4-ha"
version = "0.4.3"
description = "GL.iNet (glinet4) Home Assistant integration"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "homeassistant>=2025.9.0",
]

# This repo is a Home Assistant custom integration installed by copying
# custom_components/glinet4; it is never built or pip-installed, so tell uv not
# to treat it as a buildable package (it only provides the dev/test env).
[tool.uv]
package = false

[dependency-groups]
# homeassistant-stubs (dev) and pytest-homeassistant-custom-component (test) each
# pin an EXACT Home Assistant core version and must resolve to the same HA core
# (uv resolves all dependency groups together, so a mismatch makes every `uv run`
# fail). Renovate groups them (.github/renovate.json, group "home-assistant") and
# bumps both together in one atomic PR per HA release, so you no longer hand-bump
# them in lockstep.
dev = [
    "codespell>=2.4.2",
    "homeassistant-stubs==2026.2.0",
    "mypy>=2.1.0",
    "pylint>=4.0.6",
    "pytest>=8.3.5",
    "ruff>=0.15.20",
    "types-requests<2.33.0.20260519",
    "voluptuous-stubs>=0.1.1",
    # `dev` branch only: run `scripts/develop` (a live HA against the MT6000)
    # against our glinet4 library so the integration + library iterate together.
    "glinet4 @ git+https://github.com/glinet4/glinet4@main",
]
# Test group pulls Home Assistant's test helpers. pytest-homeassistant-custom-
# component pins an exact HA core version (0.13.313 -> HA 2026.2.0) and is the
# SINGLE SOURCE for it: CI (pytest.yml) and scripts/test run the suite in an
# ephemeral `uv run --no-project` env and READ this exact version out of
# pyproject, so Renovate's grouped bump of the pin reaches the tests
# automatically. Renovate keeps it in lockstep with homeassistant-stubs.
#
# `dev` branch only: glinet4 is installed from the library repo (@main, currently
# 0.2.x) so the integration and the library iterate together (see issue #12).
# manifest.json requires `glinet4>=0.2.1,<0.3.0`; widen that ceiling in lockstep
# when the library ships a new major (its bump-minor-pre-major config lands a
# breaking change as 0.3.0). On the upstream-bound branches (#150/#151) this
# stays a plain PyPI pin.
#
# pytest-cov is intentionally NOT listed here: pytest-hacc already pins it
# exactly (==7.0.0), so it resolves transitively. Declaring it directly makes
# Dependabot try to bump it past pytest-hacc's pin and fail the uv update job.
# scripts/test still passes `--with pytest-cov` for the ephemeral coverage run.
test = [
    "pytest-homeassistant-custom-component==0.13.313",
    "glinet4 @ git+https://github.com/glinet4/glinet4@main",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]


[tool.ruff]
required-version = ">=0.11.0"
target-version = "py313"

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false
known-first-party = [
    "homeassistant",
]

[tool.ruff.lint]
select = [
    "A001", # Variable {name} is shadowing a Python builtin
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "BLE",
    "C", # complexity, including flake8-comprehensions
    "COM818", # Trailing comma on bare tuple prohibited
    "D", # flake8-docstrings
    "DTZ003", # Use datetime.now(tz=) instead of datetime.utcnow()
    "DTZ004", # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
    "E", # pycodestyle
    "F", # pyflakes/autoflake
    "FLY", # flynt
    "FURB", # refurb
    "G", # flake8-logging-format
    "I", # isort
    "INP", # flake8-no-pep420
    "ISC", # flake8-implicit-str-concat
    "ICN001", # import concentions; {name} should be imported as {asname}
    "LOG", # flake8-logging
    "N804", # First argument of a class method should be named cls
    "N805", # First argument of a method should be named self
    "N815", # Variable {name} in class scope should not be mixedCase
    "PERF", # Perflint
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "PYI", # flake8-pyi
    "RET", # flake8-return
    "RSE", # flake8-raise
    "RUF005", # Consider iterable unpacking instead of concatenation
    "RUF006", # Store a reference to the return value of asyncio.create_task
    "RUF010", # Use explicit conversion flag
    "RUF013", # PEP 484 prohibits implicit Optional
    "RUF017", # Avoid quadratic list summation
    "RUF018", # Avoid assignment expressions in assert statements
    "RUF019", # Unnecessary key check before dictionary access
    # "RUF100", # Unused `noqa` directive; temporarily every now and then to clean them up
    "S102", # Use of exec detected
    "S103", # bad-file-permissions
    "S108", # hardcoded-temp-file
    "S306", # suspicious-mktemp-usage
    "S307", # suspicious-eval-usage
    "S313", # suspicious-xmlc-element-tree-usage
    "S314", # suspicious-xml-element-tree-usage
    "S315", # suspicious-xml-expat-reader-usage
    "S316", # suspicious-xml-expat-builder-usage
    "S317", # suspicious-xml-sax-usage
    "S318", # suspicious-xml-mini-dom-usage
    "S319", # suspicious-xml-pull-dom-usage
    "S601", # paramiko-call
    "S602", # subprocess-popen-with-shell-equals-true
    "S604", # call-with-shell-equals-true
    "S608", # hardcoded-sql-expression
    "S609", # unix-command-wildcard-injection
    "SIM", # flake8-simplify
    "SLF", # flake8-self
    "SLOT", # flake8-slots
    "T100", # Trace found: {name} used
    "TCH", # flake8-type-checking
    "TID251", # Banned imports
    "TRY", # tryceratops
    "UP", # pyupgrade
    "W", # pycodestyle
]
ignore = [
    "D202", # No blank lines allowed after function docstring
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "E501", # line too long
    "PLR0911", # Too many return statements ({returns} > {max_returns})
    "PLR0912", # Too many branches ({branches} > {max_branches})
    "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
    "PLR0915", # Too many statements ({statements} > {max_statements})
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "TRY003", # Avoid specifying long messages outside the exception class
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
# Tests annotate fixtures with runtime types and use helper functions freely;
# the type-checking-import and docstring rules add noise without value here.
"tests/**" = ["TC001", "TC002", "TC003", "D103", "SLF001"]
# scripts/ are committed standalone CLIs, not an importable package (INP001),
# and reach into the glinet4 client internals to capture fixtures (SLF001).
"scripts/**" = ["TC001", "TC002", "TC003", "INP001", "D103", "SLF001"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.pylint.main]
# Integration package (custom_components/glinet4) shares a basename with the
# glinet4 library. Anchor the source root at the repo so modules are named
# "custom_components.glinet4.*" and a bare "glinet4" import resolves to the
# library (mirrors mypy explicit_package_bases).
source-roots = ["."]
py-version = "3.13"
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.typing",
]

[tool.pylint.messages_control]
# Single source of truth for pylint disables. These previously lived partly here
# and partly on the pre-commit hook's --disable flag; consolidated so the hook is
# a bare `uv run pylint` (matching the library).
#
# too-many-* / too-few-* - not enforced, for readability
# line-too-long - ruff (E501, ignored) is the line-length authority, not pylint
# fixme - TODO/FIXME markers are tracked follow-up work, not lint noise
# invalid-name - short HA/firmware-mirroring names (hass, sid) don't fit pylint's conventions
# import-error - HA namespace-package imports don't resolve under pylint (the
#   library keeps import-error ON because its imports do resolve; revisit if HA
#   import resolution under pylint improves)
# abstract-method / overridden-final-method - HA entity/base-class patterns
# consider-using-assignment-expr - := is a dev judgement call, too opinionated
# consider-using-tuple - opinionated
# wrong-import-order - ruff's isort treats `homeassistant` as first-party
#   (known-first-party); ruff is the authority for import ordering.
# unused-argument / redefined-outer-name / protected-access - pytest fixtures
#   are passed for their side effects, shadow the fixture function name, and
#   reach into client internals in conftest; ruff (SLF001) still guards source.
disable = [
    "abstract-method",
    "consider-using-assignment-expr",
    "consider-using-tuple",
    "duplicate-code",
    "fixme",
    "import-error",
    "invalid-name",
    "line-too-long",
    "overridden-final-method",
    "protected-access",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "unused-argument",
    "wrong-import-order",
]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 100
min-similarity-lines = 7

# Single source of truth for mypy. There is deliberately NO mypy.ini: mypy's
# config discovery prefers mypy.ini over pyproject.toml, so a stray mypy.ini
# would silently shadow this block. These settings were ported verbatim from the
# former mypy.ini, so type-checking behavior is unchanged.
[tool.mypy]
python_version = "3.13"
platform = "linux"
# The integration package lives under custom_components/ (a namespace package
# with no __init__.py). explicit_package_bases + mypy_path="." anchor module
# names to the repo root so the package is always "custom_components.glinet4.*"
# and a bare "glinet4" import resolves to the installed library, not this package.
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
strict_bytes = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = ["deprecated", "ignore-without-code", "redundant-self", "truthy-iterable"]
disable_error_code = ["annotation-unchecked", "import-not-found", "import-untyped"]
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true

[tool.codespell]
quiet-level = 2
skip = "uv.lock,./.git/*,./.mypy_cache/*,*.json"
ignore-words-list = "hass"
